Bug 337668 - kmail fails to print encrypted messages 4.13.3
Summary: kmail fails to print encrypted messages 4.13.3
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-21 14:28 UTC by stakanov
Modified: 2014-11-05 09:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stakanov 2014-07-21 14:28:42 UTC
Receive an email signed and encrypted (in my case RSA/RSA with key size 4096).
The mail will be text only. Now open the mail, decrypt it. 
Now try to print it:
result- there is only a white page with a line "wait for the message being decrypted) and only the address and subject field is printable, the rest is empty. This is of course an error because the message is open, decrypted and readable. The "print preview" is empty as well.
Repeatable: stable, always. Verified on two different architectures 32 and 64 bit.
To be able to print the message it is necessary to copy the text into libreoffice and then print it. This is major because encrypted imported messages cannot be printed out. Attachments that are opened in third party programs are NOT hit by this, only the text email itself is. 
Printer drivers do not seem to be involved because one was with Gutenprint (Lexmark) from repo and one the proprietary Samsung one (Samsung Unified printer driver) from Samsung.
Comment 1 Martin Walch 2014-07-22 12:26:31 UTC
I can reproduce the problem on Gentoo (amd64). It also happens in the print preview and when printing into a file (PostScript or pdf). It makes no difference whether invoking the print dialog from the main window or from within the standalone message window of the decrypted message.
Comment 2 Clemens John 2014-10-08 12:09:40 UTC
I can confirm this Bug too with Kmail 4.14 on Archlinux (amd64).
Comment 3 mau 2014-10-30 19:08:32 UTC
I have the same problem, Debian Testing, KDE 4.14.1
Comment 4 stakanov 2014-10-30 19:13:45 UTC
I can confirm this bug still being present in opensuse 13.1 with KDE 4.14.2.
Comment 5 Laurent Montel 2014-11-05 07:58:13 UTC
Git commit c0b6ada74af3a21b1da16f6899ee060be4415acd by Montel Laurent.
Committed on 05/11/2014 at 07:57.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337668 - kmail fails to print encrypted messages 4.13.3

FIXED-IN: 4.14.3

M  +1    -1    messageviewer/viewer/viewer_p.cpp

http://commits.kde.org/kdepim/c0b6ada74af3a21b1da16f6899ee060be4415acd
Comment 6 stakanov 2014-11-05 09:52:28 UTC
Luv ya! Seriously, I am thankful. Have a great day.