Fix Bug 337668 - kmail fails to print encrypted messages 4.13.3

FIXED-IN: 4.14.3
BUG: 337668